--- a/style.css
+++ b/style.css
@@ -358,6 +358,10 @@ article {
   gap: 0.5rem;
 }
 
+article .icon {
+  cursor: default;
+}
+
 .experience-details-container > .about-containers {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -369,4 +373,31 @@ article {
   margin-left: auto;
   margin-right: auto;
   width: 50%; 
+}
+
+/* PROJECT SECTION */
+
+#projects {
+  position: relative;
+}
+
+.color-container {
+  border-color: rgb(163, 163, 163);
+  background: rgb(250, 250, 250);
+}
+
+.project-img {
+  border-radius: 2rem;
+  width: 90%;
+  height: 90%;
+}
+
+.project-title {
+  margin: 1rem;
+  color: black;
+}
+
+.project-btn {
+  color: black;
+  border-color: rgb(163, 163, 163);
 }
